--- a/SlotsOnDemand/views/parkapp/index.ejs
+++ b/SlotsOnDemand/views/parkapp/index.ejs
@@ -157,7 +157,7 @@
         <ul class="container" id="nav-items">
           <li><a href="/homepage">Home</a></li>
           <li><a href="/about">About</a></li>
-          <li><a href="http://localhost:3000/cities">Booking</a></li>
+          <li><a href="https://parking-app-emzt.onrender.com/cities">Booking</a></li>
           <li><a href="#testimonial">Testimonial</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="/login" class="btnlogin-popup">Login</a></li>
