--- a/SlotsOnDemand/views/parkapp/loginadmin.ejs
+++ b/SlotsOnDemand/views/parkapp/loginadmin.ejs
@@ -295,7 +295,7 @@
 		    const user = userCredential.user;
 		    console.log(user);
 		    alert(user.email+" Login successfully!!!");
-        window.open('http://localhost:3000/admin/cities', '_blank');
+        window.open('http://https://parking-app-emzt.onrender.com/admin/cities', '_blank');
 
         
 		    // ...
