--- a/SlotsOnDemand/views/payment/slotpayment.ejs
+++ b/SlotsOnDemand/views/payment/slotpayment.ejs
@@ -123,7 +123,7 @@
                 console.log('vehicle number stored on the server:', data.Vnum);
 
                 // Redirect to the correct route: /start-payment using window.location.pathname
-                window.location.href='http://localhost:3000/loginuser';
+                window.location.href='https://parking-app-emzt.onrender.com/loginuser';
             })
             .catch(error => {
                 console.error('Error storing vehicle number on the server:', error);
